# companion-navi

./: .env.example  .gitignore  01_daemon_architecture.md  01_설계_데몬_아키텍처.md  03_master_plan.md  03_마스터플랜.md  04_progress.md  CLAUDE.md  README.md  config.local.yaml.example  config.yaml  pyproject.toml  requirements.win-cpu.txt
assets/wakeword/: README.md  navi_ko.onnx
docs/: 03_master_plan.md  04_progress.md  TTS_zeroshot_테스트계획.md  TTS_전환.md  checklist.md  progress.md
docs/design/: aliveness.md  architecture.md  gui.md  gui_mockup.html  mood_reference.md  plan.md  vendor_cost.md
docs/research/: d3-tts-local-inference.md  d3-tts-test-plan.md  d3_tts_colab.md  d3_tts_local_inference.md  d3_tts_test_plan.md  d7_wakeword_ko.md
navi/: bus.py  cli.py  conductor.py  config.py  daemon.py  gatekeeper.py  models.py  pipeline.py  preflight.py  schedule.py
navi/brain/: __init__.py  anthropic.py  base.py  echo.py  gemini.py
navi/control/: __init__.py  runtime.py  server.py
navi/ear/: __init__.py  endpointer.py  listening.py  mic.py  vad.py  wakeword.py
navi/gui/: __init__.py  __main__.py
navi/gui/static/: index.html  waiting.html
navi/heartbeat/: __init__.py  mode.py  timing.py  topic.py
navi/memory/: __init__.py  schema.sql  store.py
navi/mouth/: __init__.py  base.py  cosyvoice.py  f5tts.py  fake.py  gptsovits.py  mood.py  sentence.py  spec.py  supertonic.py
navi/persona/: __init__.py  card.py  voice.py
navi/stt/: __init__.py  base.py  fake.py  fasterwhisper.py
notebooks/: RESUME_next_session.md  navi_ko_wakeword_train.ipynb
personas/: example.yaml  example_jp.yaml  example_kr.yaml  navi.yaml  navi_ja.yaml
scripts/: mic_check.py  run_navi.ps1  try_mouth.py  try_stt.py  try_tts.py
scripts/bench/: bench_rocm.py  bench_tts_latency.py  profile_turn.py
scripts/prep/: build_sovits_dataset.py  prep_reference.py
scripts/setup/: setup_voice_env.ps1
scripts/try/: owww_mic.py  try_clone.py  try_mouth.py  try_stt.py  try_tts.py  verify_gate.py
tests/: test_assets.py  test_brain.py  test_bus.py  test_conductor.py  test_config.py  test_config_overlay.py  test_control.py  test_daemon.py  test_ear.py  test_gatekeeper.py  test_gui_launch.py  test_listening.py  test_memory.py  test_mode.py  test_mood.py  test_persona.py  test_pipeline.py  test_preflight.py  test_sentence.py  test_timing.py  test_topic.py  test_voice.py  test_wakeword.py
