[project]
name = "companion-navi"
version = "0.1.0"
description = "반려 AI 오케스트레이터 데몬 — Hey! Listen!"
requires-python = ">=3.13"
dependencies = [
    "google-genai",
    "anthropic",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
# 음성 부품(STT/TTS)은 무거운 로컬 엔진 — 텍스트 뼈대를 가볍게 두려고 별도 extra로 분리.
# 설치: pip install -e ".[voice]"
voice = [
    "supertonic",      # 로컬 TTS (Mouth, 잠정 D3)
    "sounddevice",     # 스피커 재생
    "faster-whisper",  # 로컬 STT (Ear, 잠정 D2)
]
# D3 보이스 클로닝 후보 — WSL2 + ROCm 환경에서 설치
# ROCm PyTorch: pip install torch --index-url https://download.pytorch.org/whl/rocm6.1
voice-clone = [
    "f5-tts",      # F5-TTS (pip installable)
    "sounddevice", # 스피커 재생
    "soundfile",   # 오디오 파일 I/O (prep_reference.py)
    "librosa",     # 오디오 전처리 (prep_reference.py)
    # CosyVoice2: git clone https://github.com/FunAudioLLM/CosyVoice
    # GPT-SoVITS:  git clone https://github.com/RVC-Boss/GPT-SoVITS
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["navi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
